update text and fix alignment for deployement

--- a/src/styles/components/homepage.scss
+++ b/src/styles/components/homepage.scss
@@ -416,7 +416,11 @@ $padding-project-description: 1rem;
         @include responsive(75rem) {
           flex-direction: column;
           align-items: stretch;
-
+          justify-content: flex-start !important;
+          justify-items: flex-start !important;
+          align-items: flex-start !important;
+          text-align: left !important;
+          align-content: flex-start !important;
           .project-image {
             display: none;
           }
@@ -425,9 +429,11 @@ $padding-project-description: 1rem;
             position: relative;
             padding: $page_padding-vertical $page_padding-horizontal;
             background: $color-accent-2;
-            justify-content: flex-start;
-            justify-items: flex-start;
-            align-items: flex-start;
+            justify-content: flex-start !important;
+            justify-items: flex-start !important;
+            align-items: flex-start !important;
+            text-align: left !important;
+            align-content: flex-start !important;
             > * {
               position: relative;
               z-index: 2;
